@@ -4,6 +4,7 @@
     &#8226; Fix duplicate users while searching<br/>
     &#8226; Some changes for attaching pictures on KitKat<br/>
     &#8226; Open to the correct page when going to the timeline from a drawer activity<br/>
+    &#8226; Changes to attaching pictures from the widget tweet viewer<br/>
 <br/><br/>
 
 <b>Version 2.4.5:</b><br/><br/>
